TEST: first commit

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,12 @@
 ---
-title: Home
+title: Allay
 ---
-<p>Home</p>
+<nav class="main-nav">
+  <button class="main-nav__home">Home</button>
+</nav>
+
+<article>
+</article>
+
+<footer></footer>
+<h1>Home - Allay</h1>
